--- a/ETL pipeline (the solution).ipynb
+++ b/ETL pipeline (the solution).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 75,
    "id": "a0fae769-634c-461f-8562-ec44ae1988e2",
    "metadata": {},
    "outputs": [],
@@ -13,12 +13,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 76,
    "id": "c7df3a92-d9ac-48b5-9fb7-39022936a976",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df1 = pd.read_json(\"./resources/Tasks/tagaddod-d8ffe--MsZkGFSCtYxntenMuVF-export.json\", orient=\"index\")#, dtype={\"snapshot_datetime\": 'datetime64[ns]'})\n",
+    "df1 = pd.read_json(\"./resources/Tasks/tagaddod-d8ffe--MsZkGFSCtYxntenMuVF-export.json\", orient=\"index\", dtype={\"snapshot_datetime\": 'datetime64[ns]'})\n",
     "df2 = pd.read_json(\"./resources/Tasks/tagaddod-d8ffe--MszT9RZtTjcM5PwTCBH-export.json\", orient=\"index\", dtype={\"snapshot_datetime\": 'datetime64[ns]'})\n",
     "df3 = pd.read_json(\"./resources/Tasks/tagaddod-d8ffe--MwWeqpG3yuQD7G2wcp8-export.json\", orient=\"index\", dtype={\"snapshot_datetime\": 'datetime64[ns]'})\n",
     "df4 = pd.read_json(\"./resources/Tasks/tagaddod-d8ffe--N4SUsENXI1OF1qf8VxT-export.json\", orient=\"index\", dtype={\"snapshot_datetime\": 'datetime64[ns]'})\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 77,
    "id": "c4415daa-b6b2-4049-899f-884c11beae80",
    "metadata": {},
    "outputs": [],
@@ -41,19 +41,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 78,
+   "id": "d4a2ddd4-e7aa-4141-b7b1-db5f7727eb22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1.drop(\"meta-data\", axis=0, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "916b5d65-3269-4ed8-ad65-f2a974a66363",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in df1[df1[\"meta-data\"]!=df1[\"collector_id\"]].index:\n",
+    "    for k, v in df1.loc[i][\"meta-data\"].items():\n",
+    "        df1.at[i, k]=v  \n",
+    "# df1.drop(\"meta-data\", axis=1, inplace=True)      # droping meta-data column as it havenot additional information"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
    "id": "f73c5f6d-c7fb-4ea4-827f-3350ae89538b",
    "metadata": {},
    "outputs": [],
    "source": [
     "# concatenate the 4 files\n",
+    "\n",
     "df = pd.concat([df1, df2, df3, df4], axis=0, ignore_index=False)\n",
     "# df.insert(0, 'collector_id', df.pop('collector_id'))        # optional step to make the collector_id column in the first"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 81,
    "id": "27e3dd9a-466d-46a8-95d0-c92662a06cea",
    "metadata": {},
    "outputs": [],
@@ -63,20 +87,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 82,
    "id": "1e2df0b3-4bda-4708-ada9-edfc18d91119",
    "metadata": {},
    "outputs": [
     {
      "ename": "AttributeError",
-     "evalue": "'numpy.float64' object has no attribute 'timestamp'",
+     "evalue": "'str' object has no attribute 'timestamp'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
       "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_14996/2908336020.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msnapshot_datetime_unix\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtimestamp\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mt\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msnapshot_datetime\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_14996/2908336020.py\u001b[0m in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msnapshot_datetime_unix\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtimestamp\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mt\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msnapshot_datetime\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m: 'numpy.float64' object has no attribute 'timestamp'"
+      "\u001b[1;31mAttributeError\u001b[0m: 'str' object has no attribute 'timestamp'"
      ]
     }
    ],
