--- a/ETL pipeline (the solution).ipynb
+++ b/ETL pipeline (the solution).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "a0fae769-634c-461f-8562-ec44ae1988e2",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 67,
    "id": "c7df3a92-d9ac-48b5-9fb7-39022936a976",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 68,
    "id": "c4415daa-b6b2-4049-899f-884c11beae80",
    "metadata": {},
    "outputs": [],
@@ -41,17 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "d4a2ddd4-e7aa-4141-b7b1-db5f7727eb22",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df1.drop(\"meta-data\", axis=0, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 70,
    "id": "916b5d65-3269-4ed8-ad65-f2a974a66363",
    "metadata": {},
    "outputs": [],
@@ -64,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 71,
    "id": "f73c5f6d-c7fb-4ea4-827f-3350ae89538b",
    "metadata": {},
    "outputs": [],
@@ -72,28 +62,37 @@
     "# concatenate the 4 files\n",
     "\n",
     "df = pd.concat([df1, df2, df3, df4], axis=0, ignore_index=False)\n",
+    "df.index.name=\"idx\"\n",
     "# df.insert(0, 'collector_id', df.pop('collector_id'))        # optional step to make the collector_id column in the first"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "9fbcbd65-dc88-4ca2-aa34-1b7b45336409",
+   "execution_count": 73,
+   "id": "d4a2ddd4-e7aa-4141-b7b1-db5f7727eb22",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.index.name=\"idx\""
+    "df.drop(index=\"meta-data\", inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 74,
    "id": "27e3dd9a-466d-46a8-95d0-c92662a06cea",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(\"./resources/ETL_pipe.csv\", header=True, index=True)"
+    "df.to_csv(\"./ETL_pipe.csv\", header=True, index=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ded9d1f6-1daf-4f96-be5e-442fda071952",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
