add unix-time column

--- a/ETL pipeline (the solution).ipynb
+++ b/ETL pipeline (the solution).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "a0fae769-634c-461f-8562-ec44ae1988e2",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 2,
    "id": "c7df3a92-d9ac-48b5-9fb7-39022936a976",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 3,
    "id": "c4415daa-b6b2-4049-899f-884c11beae80",
    "metadata": {},
    "outputs": [],
@@ -41,20 +41,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 4,
+   "id": "fa03fc1b-53bc-45a9-b903-38d51b369e52",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# we can neglict this cell as it only influence unique row\n",
+    "for i in df1[df1[\"meta-data\"]!=df1[\"collector_id\"]].index:\n",
+    "    for k, v in df1.loc[i][\"meta-data\"].items():\n",
+    "        df1.at[i, k]=v  \n",
+    "df1.at['-Mt73Jj0QRoPye_E3pGY', \"snapshot_datetime\"] = pd.Timestamp(df1.loc['-Mt73Jj0QRoPye_E3pGY', \"snapshot_datetime\"])        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "916b5d65-3269-4ed8-ad65-f2a974a66363",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in df1[df1[\"meta-data\"]!=df1[\"collector_id\"]].index:\n",
-    "    for k, v in df1.loc[i][\"meta-data\"].items():\n",
-    "        df1.at[i, k]=v  \n",
     "df1.drop(\"meta-data\", axis=1, inplace=True)      # droping meta-data column as it havenot additional information"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 6,
    "id": "f73c5f6d-c7fb-4ea4-827f-3350ae89538b",
    "metadata": {},
    "outputs": [],
@@ -68,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 7,
    "id": "d4a2ddd4-e7aa-4141-b7b1-db5f7727eb22",
    "metadata": {},
    "outputs": [],
@@ -78,21 +89,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 8,
+   "id": "89dff542-0daa-421c-9e98-0082c4521ef1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"snapshot_datetime_unix\"] = [int(val.timestamp()) for val in df.snapshot_datetime]\n",
+    "# df.snapshot_datetime_unix.dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "27e3dd9a-466d-46a8-95d0-c92662a06cea",
    "metadata": {},
    "outputs": [],
    "source": [
     "df.to_csv(\"./ETL_pipe.csv\", header=True, index=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ded9d1f6-1daf-4f96-be5e-442fda071952",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
