--- a/ETL pipeline (the solution).ipynb
+++ b/ETL pipeline (the solution).ipynb
@@ -107,6 +107,24 @@
    "source": [
     "df.to_csv(\"./ETL_pipe.csv\", header=True, index=True)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c203e565-67a7-460b-a4da-157d481b7d15",
+   "metadata": {},
+   "source": [
+    "### This script written at aug-2022 by Ahmad salama \n",
+    "- salama4ai@gmail.com\n",
+    "- www.linkedin.com/in/salama4ai"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f96c696c-642f-4af9-8bbd-f6370b655ac1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
